--- a/Wildfire Prediction Challenge/Trial1.ipynb
+++ b/Wildfire Prediction Challenge/Trial1.ipynb
@@ -9787,29 +9787,44 @@
       "outputs": [],
       "source": [
         "# Create combined climate variables\n",
+        "\n",
+        "# (temp range) / (prec)\n",
+        "# temp high / prec small = high hot and dry\n",
         "train['hot_and_dry'] = (train['climate_tmmx'] - train['climate_tmmn']) / (train['climate_pr'] + 1)\n",
         "test['hot_and_dry'] = (test['climate_tmmx'] - test['climate_tmmn']) / (test['climate_pr'] + 1)\n",
         "\n",
+        "\n",
+        "# (water lost) / (available water)\n",
+        "# if this value is small = less moisture stress\n",
+        "# suggest we use prec - runoff instead of prec\n",
         "train['moisture_stress'] = train['climate_aet'] / (train['climate_pr'] + train['climate_soil'] + 1)\n",
         "test['moisture_stress'] = test['climate_aet'] / (test['climate_pr'] + test['climate_soil'] + 1)\n",
         "\n",
         "train['temperature_range'] = train['climate_tmmx'] - train['climate_tmmn']\n",
         "test['temperature_range'] = test['climate_tmmx'] - test['climate_tmmn']\n",
         "\n",
+        "# combine (drought index) and (water deficit)\n",
         "train['drought_index'] = train['climate_pdsi'] + train['climate_def']\n",
         "test['drought_index'] = test['climate_pdsi'] + test['climate_def']\n",
         "\n",
+        "# (vapor pressure def) / (max temp)\n",
+        "# if high = strong drying effect\n",
         "train['vpd_temp_ratio'] = train['climate_vpd'] / (train['climate_tmmx'] + 1)\n",
         "test['vpd_temp_ratio'] = test['climate_vpd'] / (test['climate_tmmx'] + 1)\n",
         "\n",
+        "# (temp range) * (prec)\n",
+        "# to explain use\n",
         "train['temp_precip_interaction'] = (train['climate_tmmx'] - train['climate_tmmn']) * train['climate_pr']\n",
         "test['temp_precip_interaction'] = (test['climate_tmmx'] - test['climate_tmmn']) * test['climate_pr']\n",
         "\n",
+        "# (vpd moist int) * (moist stress)\n",
         "train['vpd_moisture_interaction'] = train['vpd_temp_ratio'] * train['moisture_stress']\n",
         "test['vpd_moisture_interaction'] = test['vpd_temp_ratio'] * test['moisture_stress']\n",
         "\n",
         "# Geographic Regions\n",
+        "\n",
         "# Define latitude and longitude zones based on the specific ranges\n",
+        "# Segment data into different bins/intervals ie (-26 to -22) (-22 to -18) (-18 to -16)\n",
         "train['lat_zone'] = pd.cut(train['lat'], bins=[-26, -22, -18, -16], labels=['Southernmost', 'Mid-Southern', 'Northernmost'])\n",
         "test['lat_zone'] = pd.cut(test['lat'], bins=[-26, -22, -18, -16], labels=['Southernmost', 'Mid-Southern', 'Northernmost'])\n",
         "\n",
