--- a/Wildfire Prediction Challenge/Hyperparameter_Tuning_Notebook.ipynb
+++ b/Wildfire Prediction Challenge/Hyperparameter_Tuning_Notebook.ipynb
@@ -306,7 +306,7 @@
    ],
    "source": [
     "# The training data.\n",
-    "var_defs = pd.read_csv(\"https://raw.githubusercontent.com/GKamundia/Zindi/main/variable_definitions.csv\")\n",
+    "var_defs = pd.read_csv(\"https://raw.githubusercontent.com/GKamundia/Zindi/Kamundia/Wildfire%20Prediction%20Challenge/variable_definitions.csv\")\n",
     "var_defs"
    ]
   },
@@ -531,7 +531,7 @@
    ],
    "source": [
     "# The training data.\n",
-    "train = pd.read_csv('https://raw.githubusercontent.com/GKamundia/Zindi/main/Train.csv')\n",
+    "train = pd.read_csv('https://raw.githubusercontent.com/GKamundia/Zindi/Kamundia/Wildfire%20Prediction%20Challenge/Train.csv')\n",
     "train.head()"
    ]
   },
@@ -643,7 +643,7 @@
     }
    ],
    "source": [
-    "test = pd.read_csv('https://raw.githubusercontent.com/GKamundia/Zindi/main/Test.csv')\n",
+    "test = pd.read_csv('https://raw.githubusercontent.com/GKamundia/Zindi/Kamundia/Wildfire%20Prediction%20Challenge/Test.csv')\n",
     "test.head(1)"
    ]
   },
@@ -2043,7 +2043,7 @@
    "outputs": [],
    "source": [
     "# Look at the sample submission file\n",
-    "ss = pd.read_csv('https://raw.githubusercontent.com/GKamundia/Zindi/main/SampleSubmission.csv')\n",
+    "ss = pd.read_csv('https://raw.githubusercontent.com/GKamundia/Zindi/Kamundia/Wildfire%20Prediction%20Challenge/SampleSubmission.csv')\n",
     "ss.head()"
    ]
   },
